--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 
-<app-right-side-bar></app-right-side-bar>
-<app-header-bar></app-header-bar>
+  <app-right-side-bar></app-right-side-bar>
+  <app-header-bar></app-header-bar>
+
+  <div>
+      <router-outlet/>
+  </div>
