--- a/src/app/common/header-bar/header-bar.component.html
+++ b/src/app/common/header-bar/header-bar.component.html
@@ -1,5 +1,5 @@
 <!-- header.component.html -->
-<header class="bg-white shadow-md w-full p-4 flex justify-between items-center pl-72">
+<header class="bg-white shadow-md w-full h-12 p-4 flex justify-between items-center pl-72">
 <!--  <h1 class="text-lg font-semibold">PO List</h1>-->
 <!--  <div class="flex items-center space-x-6">-->
   <div class="flex items-center space-x-4 ml-auto">
@@ -10,10 +10,10 @@
       </svg>
     </button>
     <img src="assets/profile-img.jpg" class="w-8 h-8 rounded-full" alt="User">
-    <button>
-      <i class="fa-solid fa-bars"></i>
-    </button>
+<!--    <button>-->
+<!--      <i class="fa-solid fa-bars"></i>-->
+<!--    </button>-->
   </div>
 </header>
 
-<router-outlet />
+
