Add new component "addItem"

--- a/src/app/serviceItem/item/add-item/add-item.component.html
+++ b/src/app/serviceItem/item/add-item/add-item.component.html
@@ -47,7 +47,7 @@
       </div>
 
       <!-- Flex container for the third row -->
-      <div class="flex space-x-8">
+      <div class="flex space-x-8 mb-1">
         <!-- Master Item -->
         <div class="flex-1">
           <label for="masterItem" class="block text-xl font-medium text-gray-700">Master Item</label>
