--- a/src/app/serviceItem/purchase-order/purchase-order.component.html
+++ b/src/app/serviceItem/purchase-order/purchase-order.component.html
@@ -1,3 +1,4 @@
 <main class="ml-64 mt-2 p-4">
   <p>purchase-order works!ggggggggggggggggggggggggggggggggggggggggggggjggggggggggggggggggggg</p>
 </main>
+<router-outlet/>
