--- a/src/app/serviceItem/item-add/item-add.component.html
+++ b/src/app/serviceItem/item-add/item-add.component.html
@@ -6,4 +6,6 @@
       <span class="material-icons pr-2" style="font-size: 16px">{{'add'}}</span>Add Item</button>
   </div>
 </div>
+
+<app-table-with-filter></app-table-with-filter>
 <router-outlet/>
