Table Design complete

--- a/src/app/templete/table-with-filter/table-with-filter.component.html
+++ b/src/app/templete/table-with-filter/table-with-filter.component.html
@@ -1,64 +1,66 @@
-<div class="ml-3 mr-5 bg-white">
-  <mat-form-field>
-  <!--  <mat-label>Filter</mat-label>-->
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
-  </mat-form-field>
+<div class="ml-3 mr-5 bg-white in-custom-main">
+  <div class="custom-input">
+    <input matInput class="custom-input-field" (keyup)="applyFilter($event)"  placeholder= " Search" #input>
+  </div>
 
   <div class="mat-elevation-z8 ">
-    <table mat-table [dataSource]="dataSource" matSort class="w-full border border-gray-300">
+    <div class="table-responsive">
+      <table mat-table [dataSource]="dataSource" matSort class="w-full border border-gray-300 ">
 
-      <!-- ID Column -->
-      <ng-container matColumnDef="sl">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head iv_custom_head_sl"> SL </th>
-        <td mat-cell class="iv_custom_row iv_custom_row_sl" *matCellDef="let row"> {{row.sl}} </td>
-      </ng-container>
+        <!-- ID Column -->
+        <ng-container matColumnDef="sl">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head iv_custom_head_sl"> SL </th>
+          <td mat-cell class="iv_custom_row iv_custom_row_sl" *matCellDef="let row"> {{row.sl}} </td>
+        </ng-container>
 
-      <!-- Progress Column -->
-      <ng-container matColumnDef="item">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> Item </th>
-        <td mat-cell class="iv_custom_row" *matCellDef="let row" class="iv_custom_row"> {{row.item}}% </td>
-      </ng-container>
+        <!-- Progress Column -->
+        <ng-container matColumnDef="item">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> Item </th>
+          <td mat-cell class="iv_custom_row" *matCellDef="let row" class="iv_custom_row"> {{row.item}}% </td>
+        </ng-container>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="sku">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> SKU </th>
-        <td mat-cell class="iv_custom_row" *matCellDef="let row"> {{row.sku}} </td>
-      </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="sku">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> SKU </th>
+          <td mat-cell class="iv_custom_row" *matCellDef="let row"> {{row.sku}} </td>
+        </ng-container>
 
-      <!-- Fruit Column -->
-      <ng-container matColumnDef="uom">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> UoM </th>
-        <td mat-cell class="iv_custom_row" *matCellDef="let row"> {{row.uom}} </td>
-      </ng-container>
+        <!-- Fruit Column -->
+        <ng-container matColumnDef="uom">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> UoM </th>
+          <td mat-cell class="iv_custom_row" *matCellDef="let row"> {{row.uom}} </td>
+        </ng-container>
 
-      <!-- Fruit Column -->
-      <ng-container matColumnDef="category">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> Category </th>
-        <td mat-cell class="iv_custom_row" *matCellDef="let row"> {{row.category}} </td>
-      </ng-container>
+        <!-- Fruit Column -->
+        <ng-container matColumnDef="category">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> Category </th>
+          <td mat-cell class="iv_custom_row" *matCellDef="let row"> {{row.category}} </td>
+        </ng-container>
 
-      <!-- Fruit Column -->
-      <ng-container matColumnDef="specification">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> Specification </th>
-        <td mat-cell class="iv_custom_row" *matCellDef="let row"> {{row.specification}} </td>
-      </ng-container>
+        <!-- Fruit Column -->
+        <ng-container matColumnDef="specification">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> Specification </th>
+          <td mat-cell class="iv_custom_row" *matCellDef="let row"> {{row.specification}} </td>
+        </ng-container>
 
-      <!-- Fruit Column -->
-      <ng-container matColumnDef="created_on">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> Created On </th>
-        <td mat-cell class="iv_custom_row" *matCellDef="let row"> {{row.created_on}} </td>
-      </ng-container>
+        <!-- Fruit Column -->
+        <ng-container matColumnDef="created_on">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> Created On </th>
+          <td mat-cell class="iv_custom_row" *matCellDef="let row"> {{row.created_on}} </td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns" class="iv_custom_head"></tr>
-      <tr mat-row class="iv_custom_row" *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-      <!-- Row shown when there is no matching data. -->
-      <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-      </tr>
-    </table>
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+        </tr>
+      </table>
+    </div>
 
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+    <mat-paginator class="custom-pagination" [pageSizeOptions]="[20, 50, 100]" aria-label="Select page"></mat-paginator>
+<!--    <mat-paginator [pageSizeOptions]="[20, 50, 100]" aria-label="Select page of users"></mat-paginator>-->
   </div>
 
 </div>
