--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
  <app-right-side-bar #sidebar></app-right-side-bar>
   <app-header-bar></app-header-bar>
  <main
-   class="h-screen mt-1 p-4 transition-all duration-500 ease-in-out bg-color-custom"
+   class=" mt-1 p-4 transition-all duration-500 ease-in-out bg-color-custom"
    [ngClass]="{ 'ml-64': sidebar.isExpanded, 'ml-20': !sidebar.isExpanded }">
    <router-outlet></router-outlet>
  </main>
