--- a/src/app/templete/table-with-filter/table-with-filter.component.css
+++ b/src/app/templete/table-with-filter/table-with-filter.component.css
@@ -1,14 +1,64 @@
+.in-custom-main{
+  border: 1px solid white;
+  border-radius: 10px;
+  padding-bottom: 5%;
+}
 .iv_custom_row{
   background-color: white;
   padding: 2px;
 }
 
 .iv_custom_head {
-  background-color: whitesmoke;
+  background-color: rgb(249, 249, 249);
+  border-bottom: solid 2px rgb(228, 231, 236); /* Change the color */
+  border-top: solid 2px rgb(228, 231, 236);
+  color: rgb(121, 125, 132);
+  text-align: left;
 }
-.iv_custom_head_sl{
+
+.iv_custom_row_sl{
+  /*text-align: center;*/
   width: 5px;
 }
-.iv_custom_row_sl{
-  text-align: center;
+
+.iv_custom_row {
+  border-bottom: solid 2px rgb(228, 231, 236) ;
+  padding-left: 15px;
 }
+.custom-input{
+  color: #999999;
+}
+.custom-input-field{
+  border: solid 2px rgb(228, 231, 236) ;
+  border-radius: 5px;
+  width: 15%;
+  min-height: 40px;
+  max-height: 60px;
+  height: 100%;
+  margin: 1%;
+
+}
+
+.custom-input-field:focus {
+  border-color: rgb(188, 188, 188);
+  outline: none;
+}
+
+::ng-deep .mat-mdc-paginator-page-size-label{
+  display: none;
+}
+
+.table-responsive {
+  overflow-x: auto;
+  white-space: nowrap;
+  width: 100%;
+}
+
+@media (max-width: 768px) {
+  .table-responsive {
+    display: block;
+  }
+}
+
+
+
