--- a/src/app/serviceItem/item-add/item-add.component.html
+++ b/src/app/serviceItem/item-add/item-add.component.html
@@ -7,5 +7,5 @@
   </div>
 </div>
 
-<app-table-with-filter></app-table-with-filter>
+<app-table-with-filter [columns]="tableColumns" [data]="tableData"></app-table-with-filter>
 <router-outlet/>
