--- a/src/app/templete/table-with-filter/table-with-filter.component.html
+++ b/src/app/templete/table-with-filter/table-with-filter.component.html
@@ -7,54 +7,64 @@
     <div class="table-responsive">
       <table mat-table [dataSource]="dataSource" matSort class="w-full border border-gray-300 ">
 
-        <!-- ID Column -->
-        <ng-container matColumnDef="sl">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head iv_custom_head_sl"> SL </th>
-          <td mat-cell class="iv_custom_row iv_custom_row_sl" *matCellDef="let row"> {{row.sl}} </td>
+        <!-- Dynamic Column Definitions -->
+        <ng-container *ngFor="let column of columns" [matColumnDef]="column.key">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head">
+            {{ column.label }}
+          </th>
+          <td mat-cell class="iv_custom_row" *matCellDef="let row">
+            {{ row[column.key] }}
+          </td>
         </ng-container>
 
-        <!-- Progress Column -->
-        <ng-container matColumnDef="item">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> Item </th>
-          <td mat-cell class="iv_custom_row" *matCellDef="let row" class="iv_custom_row"> {{row.item}}% </td>
-        </ng-container>
+<!--        &lt;!&ndash; ID Column &ndash;&gt;-->
+<!--        <ng-container matColumnDef="sl">-->
+<!--          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head iv_custom_head_sl"> SL </th>-->
+<!--          <td mat-cell class="iv_custom_row iv_custom_row_sl" *matCellDef="let row"> {{row.sl}} </td>-->
+<!--        </ng-container>-->
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="sku">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> SKU </th>
-          <td mat-cell class="iv_custom_row" *matCellDef="let row"> {{row.sku}} </td>
-        </ng-container>
+<!--        &lt;!&ndash; Progress Column &ndash;&gt;-->
+<!--        <ng-container matColumnDef="item">-->
+<!--          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> Item </th>-->
+<!--          <td mat-cell class="iv_custom_row" *matCellDef="let row" class="iv_custom_row"> {{row.item}}% </td>-->
+<!--        </ng-container>-->
 
-        <!-- Fruit Column -->
-        <ng-container matColumnDef="uom">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> UoM </th>
-          <td mat-cell class="iv_custom_row" *matCellDef="let row"> {{row.uom}} </td>
-        </ng-container>
+<!--        &lt;!&ndash; Name Column &ndash;&gt;-->
+<!--        <ng-container matColumnDef="sku">-->
+<!--          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> SKU </th>-->
+<!--          <td mat-cell class="iv_custom_row" *matCellDef="let row"> {{row.sku}} </td>-->
+<!--        </ng-container>-->
 
-        <!-- Fruit Column -->
-        <ng-container matColumnDef="category">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> Category </th>
-          <td mat-cell class="iv_custom_row" *matCellDef="let row"> {{row.category}} </td>
-        </ng-container>
+<!--        &lt;!&ndash; Fruit Column &ndash;&gt;-->
+<!--        <ng-container matColumnDef="uom">-->
+<!--          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> UoM </th>-->
+<!--          <td mat-cell class="iv_custom_row" *matCellDef="let row"> {{row.uom}} </td>-->
+<!--        </ng-container>-->
 
-        <!-- Fruit Column -->
-        <ng-container matColumnDef="specification">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> Specification </th>
-          <td mat-cell class="iv_custom_row" *matCellDef="let row"> {{row.specification}} </td>
-        </ng-container>
+<!--        &lt;!&ndash; Fruit Column &ndash;&gt;-->
+<!--        <ng-container matColumnDef="category">-->
+<!--          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> Category </th>-->
+<!--          <td mat-cell class="iv_custom_row" *matCellDef="let row"> {{row.category}} </td>-->
+<!--        </ng-container>-->
 
-        <!-- Fruit Column -->
-        <ng-container matColumnDef="created_on">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> Created On </th>
-          <td mat-cell class="iv_custom_row" *matCellDef="let row"> {{row.created_on}} </td>
-        </ng-container>
+<!--        &lt;!&ndash; Fruit Column &ndash;&gt;-->
+<!--        <ng-container matColumnDef="specification">-->
+<!--          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> Specification </th>-->
+<!--          <td mat-cell class="iv_custom_row" *matCellDef="let row"> {{row.specification}} </td>-->
+<!--        </ng-container>-->
+
+<!--        &lt;!&ndash; Fruit Column &ndash;&gt;-->
+<!--        <ng-container matColumnDef="created_on">-->
+<!--          <th mat-header-cell *matHeaderCellDef mat-sort-header class="iv_custom_head"> Created On </th>-->
+<!--          <td mat-cell class="iv_custom_row" *matCellDef="let row"> {{row.created_on}} </td>-->
+<!--        </ng-container>-->
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
         <!-- Row shown when there is no matching data. -->
         <tr class="mat-row" *matNoDataRow>
-          <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+          <td class="mat-cell" [attr.colspan]="columns.length">No data matching the filter "{{input.value}}"</td>
         </tr>
       </table>
     </div>
