--- a/src/app/serviceItem/user-details/user-details.component.html
+++ b/src/app/serviceItem/user-details/user-details.component.html
@@ -10,7 +10,7 @@
     </div>
 
   </div>
-  <div class="w-full mx-auto mt-10 shadow-lg rounded-lg overflow-hidden border-0">
+  <div class="w-full mx-auto mt-5 shadow-lg rounded-lg overflow-hidden">
     <div class="p-4">
       <div class="flex items-center mb-2">
         <div class="pr-4">
@@ -28,19 +28,19 @@
         </div>
         <div class="grid grid-cols-2 gap-4 md:grid-cols-4">
           <div class="p-2  rounded-lg">
-            <p class="font-medium">Email</p>
+            <p class="font-medium text-gray-400">Email</p>
             <p>prantokhancom</p>
           </div>
           <div class="p-2  rounded-lg">
-            <p class="font-medium">Age</p>
+            <p class="font-medium text-gray-400">Age</p>
             <p>32</p>
           </div>
           <div class="p-2  rounded-lg">
-            <p class="font-medium">Designation</p>
+            <p class="font-medium text-gray-400">Designation</p>
             <p>SELP Officer</p>
           </div>
           <div class="p-2  rounded-lg">
-            <p class="font-medium">Contact No.</p>
+            <p class="font-medium text-gray-400">Contact No.</p>
             <p>013 6316 6161</p>
           </div>
         </div>
@@ -54,28 +54,28 @@
         </div>
         <div class="grid grid-cols-2 gap-4 md:grid-cols-4">
           <div class="p-2  rounded-lg">
-            <p class="font-medium">Division Name</p>
+            <p class="font-medium text-gray-400">Division Name</p>
             <p>Dhaka</p>
           </div>
           <div class="p-2  rounded-lg">
-            <p class="font-medium">District Name</p>
+            <p class="font-medium text-gray-400">District Name</p>
             <p>Dhaka</p>
           </div>
           <div class="p-2  rounded-lg">
-            <p class="font-medium">Upazila Name</p>
+            <p class="font-medium text-gray-400">Upazila Name</p>
             <p>Dhaka</p>
           </div>
           <div class="p-2  rounded-lg">
-            <p class="font-medium">Branch Name</p>
+            <p class="font-medium text-gray-400">Branch Name</p>
             <p>Pabna</p>
           </div>
-          <div class="p-2 rounded-lg">
-            <div class="border-t border-gray-200 my-4 w-full"></div>
-            <div class="mt-2">
-              <p class="font-medium">Office Name</p>
-              <p>Gulshan</p>
-            </div>
-          </div>
+        </div>
+      </div>
+      <div class="p-2 rounded-lg">
+        <div class="border-t border-gray-200 my-4 w-full"></div>
+        <div class="mt-2">
+          <p class="font-medium text-gray-400">Office Name</p>
+          <p>Gulshan</p>
         </div>
       </div>
     </div>
