--- a/src/app/serviceItem/item/add-item/add-item.component.html
+++ b/src/app/serviceItem/item/add-item/add-item.component.html
@@ -1,5 +1,5 @@
-<main class="ml-64 mt-2 p-2">
-  <div class="p-2 bg-white shadow-md rounded-lg">
+<main class="ml-64 mt-2 p-2 bg-emerald-50">
+  <div class="p-2 bg-white shadow-lg rounded-lg">
     <div class="flex space-x-1 items-center mb-5">
       <div>
         <button onclick="history.back()" class="flex items-center space-x-2 px-4 py-2 bg-white text-black rounded-lg hover:bg-gray-600 transition">
@@ -12,18 +12,17 @@
     </div>
     <form class="space-y-4">
       <!-- Flex container for the first row -->
-      <div class="flex space-x-8">
+      <div class="flex space-x-10 justify-evenly">
         <!-- Item Name -->
-        <div class="flex-1">
+        <div class="">
           <label for="itemName" class="block text-md font-medium text-gray-700">Item Name</label>
-          <input id="itemName" type="text" class="mt-3 block p-2 w-full rounded-md border-gray-300 shadow-sm" placeholder="Type Item Name">
+          <input id="itemName" type="text" class="input-field" placeholder="Type Item Name">
         </div>
-
         <!-- Item Group -->
-        <div class="flex-1">
-          <label for="itemGroup" class="block text-md font-medium text-gray-700">Item Group</label>
+        <div class="">
+          <label for="itemGroup" class="input-level">Item Group</label>
           <div class="relative w-full mt-3">
-            <select id="itemGroup" class="w-full border border-gray-300 rounded-md py-2 px-3 text-gray-700 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+            <select id="itemGroup" class="dropDown">
               <option value="1">Option 1</option>
               <option value="2">Option 2</option>
               <option value="3">Option 3</option>
@@ -31,20 +30,19 @@
           </div>
         </div>
       </div>
-
       <!-- Flex container for the second row -->
-      <div class="flex space-x-8">
+      <div class="flex justify-evenly space-x-10">
         <!-- Specification -->
-        <div class="flex-1">
-          <label for="specification" class="block text-md font-medium text-gray-700">Specification</label>
-          <input id="specification" type="text" class="mt-3 block p-2 w-full rounded-md border-gray-300 shadow-sm" placeholder="Type Specification">
+        <div class="">
+          <label for="specification" class="input-level">Specification</label>
+          <input id="specification" type="text" class="input-field" placeholder="Type Specification">
         </div>
 
         <!-- UoM -->
-        <div class="flex-1">
+        <div class="">
           <label for="uom" class="block text-md font-medium text-gray-700">UoM</label>
           <div class="relative w-full mt-3">
-            <select id="uom" class="w-full border border-gray-300 rounded-md py-2 px-3 text-gray-700 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+            <select id="uom" class="dropDown">
               <option value="1">Option 1</option>
               <option value="2">Option 2</option>
               <option value="3">Option 3</option>
@@ -55,22 +53,21 @@
       </div>
 
       <!-- Flex container for the third row -->
-      <div class="flex space-x-8 mb-1">
+      <div class="flex space-x-10 justify-evenly mr-10">
         <!-- Master Item -->
-        <div class="flex-1">
-          <label for="masterItem" class="block text-md font-medium text-gray-700">Master Item</label>
+        <div class="">
+          <label for="masterItem" class="input-level">Master Item</label>
           <div class="relative w-full mt-3">
-            <select id="masterItem" class="w-full border border-gray-300 rounded-md py-2 px-3 text-gray-700 focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+            <select id="masterItem" class="dropDown">
               <option value="1">Option 1</option>
               <option value="2">Option 2</option>
               <option value="3">Option 3</option>
             </select>
           </div>
         </div>
-
         <!-- Allow for Deviation Rate -->
-        <div class="flex-1">
-          <label class="block text-md font-medium text-gray-700 mt-4">Allow for Deviation Rate</label>
+        <div class="w-80">
+          <label class="input-level">Allow for Deviation Rate</label>
           <mat-radio-group aria-label="Select an option">
             <mat-radio-button value="1">Yes</mat-radio-button>
             <mat-radio-button value="2">No</mat-radio-button>
@@ -79,11 +76,11 @@
       </div>
 
       <!-- Remarks -->
-      <div>
-        <label for="remarks" class="block text-md font-medium text-gray-700">Remarks</label>
+      <div class="ml-40 mr-40">
+        <label for="remarks" class="input-level">Remarks</label>
         <textarea id="remarks" class="mt-1 block p-4 w-full rounded-md border-gray-300 shadow-sm" rows="3" placeholder="Write comment about the item..."></textarea>
       </div>
-      <div class="flex justify-end space-x-2 mt-6">
+      <div class="flex justify-end space-x-2 mt-6 mr-40 mb-5">
         <button routerLink="/item-list" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 hover:cursor-pointer">
           Cancel
         </button>
