--- a/src/app/serviceItem/stock-in/stock-in.component.html
+++ b/src/app/serviceItem/stock-in/stock-in.component.html
@@ -1,3 +1,3 @@
-<main class="ml-64 mt-2 p-4">
+<main class="ml-64 mt-2 p-4 bg-emerald-50">
   <p>stock-in works!jjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjj</p>
 </main>
