--- a/src/app/serviceItem/user/user-details/user-details.component.html
+++ b/src/app/serviceItem/user/user-details/user-details.component.html
@@ -1,4 +1,4 @@
-<main class="ml-64 mt-2 p-4">
+<main class="ml-64 mt-2 p-4 bg-emerald-50">
   <div class="text-black flex items-center space-x-2">
     <button onclick="history.back()" class="flex items-center space-x-2 px-4 py-2 bg-white text-black rounded-lg hover:bg-gray-600 transition">
       <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 24 24" fill="currentColor">
