--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,28 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.dropDown{
+  @apply
+  w-90 h-12 border
+  border-gray-300
+  rounded-md
+  py-2 px-3
+  text-gray-700
+  focus:ring-2 focus:ring-blue-500 focus:border-blue-500
+}
+
+.input-level{
+  @apply
+  block text-lg font-medium text-gray-700
+}
+
+.input-field{
+  @apply
+  mt-3
+  mb-3
+  block
+  p-2
+  w-90
+  h-12 rounded-md border-gray-300 shadow-sm
+}
