--- a/src/app/serviceItem/purchase-order/purchase-order.component.html
+++ b/src/app/serviceItem/purchase-order/purchase-order.component.html
@@ -1,4 +1,4 @@
-<main class="ml-64 mt-2 p-4 bg-emerald-50">
+<main class="mt-2 p-4">
 <!--  page header-->
   <div>
     <div class="p-2 bg-white shadow-md rounded-lg mb-4 ">
