--- a/src/app/serviceItem/item/item-add/item-add.component.html
+++ b/src/app/serviceItem/item/item-add/item-add.component.html
@@ -2,7 +2,7 @@
 <div class="grid grid-cols-2 gap-4">
     <h2 class="page-header" >Item List</h2>
   <div class="example-button-row">
-    <button mat-stroked-button class="float-right mr-5 custom-button " [routerLink]="'/add-item-form'">
+    <button mat-stroked-button class="float-right mr-5 custom-button-global" [routerLink]="'/add-item-form'">
       <span class="material-icons pr-2" style="font-size: 16px">{{'add'}}</span>Add Item</button>
   </div>
 </div>
