--- a/src/styles.css
+++ b/src/styles.css
@@ -40,8 +40,22 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   mt-2 block p-4 w-90 rounded-md border-gray-300 shadow-lg
 }
 
-.submitButton{
+.custom-button-global {
+  border-radius: 4px !important;
+  background-color: deeppink !important; /* Change from black to pink */
+  color: white !important;
+  font-size: 16px !important;
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+.custom-button-global:hover {
+  background-color: #e60078; /* Pink shade on hover */
+  cursor: pointer !important;
+}
+
+.cancel-button{
   @apply
-  bg-black text-white px-4 py-2 rounded hover:bg-gray-600
+  cursor-pointer bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600
 }
 
