--- a/src/app/serviceItem/item-group/add-item-group/add-item-group.component.html
+++ b/src/app/serviceItem/item-group/add-item-group/add-item-group.component.html
@@ -1,5 +1,6 @@
-<main class="">
-  <div class="p-6 bg-white shadow-lg rounded-lg">
+<main class="p-4 sm:p-6">
+  <div class="max-w-lg mx-auto bg-white shadow-lg rounded-lg p-6">
+
     <!-- Header with Back Button -->
     <div class="flex items-center space-x-2 mb-5">
       <button onclick="history.back()" class="flex items-center px-4 py-2 bg-white text-black rounded-lg hover:bg-gray-600 transition">
@@ -10,32 +11,35 @@
       <h2 class="text-xl font-semibold">Add Item Group</h2>
     </div>
 
+    <!-- Form -->
     <form class="space-y-5">
-      <!-- Grid Layout -->
-      <div class="pl-90">
-        <!-- Item Name -->
+
+      <!-- Item Name -->
+      <div class="pl-12">
         <div>
           <label for="itemGroupName" class="input-level">Item Group Name</label>
           <input id="itemGroupName" type="text" class="input-field" placeholder="Type Item Name">
         </div>
+
         <!-- Remarks -->
-        <div class="">
+        <div>
           <label for="remarks" class="input-level">Description</label>
-          <textarea id="remarks" class="remarks" rows="3" placeholder="Write comment about the item..."></textarea>
+          <textarea id="remarks" class="remarks w-full p-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" rows="3" placeholder="Write comment about the item..."></textarea>
         </div>
       </div>
+
       <!-- Buttons -->
       <div class="flex justify-end space-x-2">
-        <button routerLink="/setup/item-group-list" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">
+        <button routerLink="/setup/item-group-list" class="cancel-button">
           Cancel
         </button>
-        <button class="submitButton">
+        <button class="custom-button-global p-4">
           Submit
         </button>
       </div>
+
     </form>
   </div>
 </main>
 
 <router-outlet/>
-
