--- a/src/app/serviceItem/organization/organization-list/organization-list.component.html
+++ b/src/app/serviceItem/organization/organization-list/organization-list.component.html
@@ -1,7 +1,7 @@
 <div class="grid grid-cols-2 gap-4">
   <h2 class="page-header" >Organization List</h2>
   <div class="example-button-row">
-    <button mat-stroked-button class="float-right mr-5 custom-button" [routerLink]="'/add-organization'">
+    <button mat-stroked-button class="float-right mr-5 custom-button-global" [routerLink]="'/add-organization'">
       <span class="material-icons pr-2" style="font-size: 16px">{{'add'}}</span>Add organization</button>
   </div>
 </div>
