--- a/src/app/common/header-bar/header-bar.component.html
+++ b/src/app/common/header-bar/header-bar.component.html
@@ -3,7 +3,7 @@
 <!--  <h1 class="text-lg font-semibold">PO List</h1>-->
 <!--  <div class="flex items-center space-x-6">-->
   <div class="flex items-center space-x-4 ml-auto">
-    <button class="relative">
+    <button (click)="openPopUp()" class="relative cursor-pointer">
       <span class="absolute top-1 right-1 bg-red-500 text-white text-xs rounded-full w-2 h-2"></span>
       <svg class="w-8 h-8 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14V9a6 6 0 10-12 0v5c0 .386-.149.754-.405 1.05L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"></path>
