Side nav are scroll able

--- a/src/app/common/right-side-bar/right-side-bar.component.css
+++ b/src/app/common/right-side-bar/right-side-bar.component.css
@@ -8,3 +8,13 @@
 aside {
   overflow: hidden;
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.custom-scrollbar {
+  -ms-overflow-style: none; /* Hide scrollbar in IE and Edge */
+  scrollbar-width: none; /* Hide scrollbar in Firefox */
+}
+
