--- a/src/app/common/right-side-bar/right-side-bar.component.html
+++ b/src/app/common/right-side-bar/right-side-bar.component.html
@@ -12,7 +12,7 @@
     <span class="text-xl font-bold" *ngIf="isPinned() || isHovered()">Inventory</span>
   </div>
 
-  <nav class="mt-5">
+  <nav class="mt-5 overflow-y-auto max-h-full custom-scrollbar">
     <ul>
       <li *ngFor="let item of navItems; let i = index" class="mb-3">
         <a
@@ -69,3 +69,4 @@
 
 
 
+<!--<nav class="mt-5 overflow-y-auto max-h-full">-->
