--- a/src/app/serviceItem/roleUAM/role-uam-list/role-uam-list.component.html
+++ b/src/app/serviceItem/roleUAM/role-uam-list/role-uam-list.component.html
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-2 gap-4">
+<div class="grid grid-cols-2 gap-4 items-center">
   <h2 class="page-header" >Role Management</h2>
   <div class="example-button-row">
     <button mat-stroked-button class="float-right mr-5 custom-button-global " [routerLink]="'/add-item-group'">
