--- a/src/app/serviceItem/category/category-list/category-list.component.html
+++ b/src/app/serviceItem/category/category-list/category-list.component.html
@@ -1,5 +1,5 @@
 
-<div class="grid grid-cols-2 gap-4">
+<div class="grid grid-cols-2 gap-4 items-center">
   <h2 class="page-header" >Category List</h2>
   <div class="example-button-row">
     <button mat-stroked-button class="float-right mr-5 custom-button-global " [routerLink]="'/add-category'">
